--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,11 @@
 @import url('./index.css');
 
 footer {
-    background-color: var(--MenuColor);
+    background-color: var(--BgColor);
     display:flex;
     flex-direction: column;
     align-items: center;
-    color: var(--fontColorP);
+    color: var(--FontColorButton);
 }
 
 .contact {
@@ -20,7 +20,7 @@ footer {
     width: 70%;
     height: 100px;
     margin: 20px 0px 0px;
-    background: var(--BgColor2);
+    background: var(--btnColor);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -34,6 +34,44 @@ footer {
     padding: 15px;
     color: var(--fontColorTittle);
     display: flex;
-    justify-content: space-around;
-
+    justify-content: center;
 }
+
+.socialMedia > a {
+    margin: 10px 10px;
+}
+
+@media screen and (min-width: 720px) {
+    .contact {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    .contact > div {
+        width: 200px;
+        height: 100px;
+        margin: 20px 20px 0px;
+        background: var(--btnColor);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        border-radius: 5px;
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    .contact > div {
+        width: 500px;
+        height: 200px;
+        margin: 60px 20px 0px;
+    } 
+    
+    .socialMedia {
+        font-size: 60px;
+        padding: 30px;
+    }
+} 
