--- a/css/projects.css
+++ b/css/projects.css
@@ -55,3 +55,43 @@ h4 {
 .btn-Visitar > i { 
     font-size: 20px ;
 }
+
+@media screen and (min-width: 720px) {
+    h4 {
+        font-size: 2em;
+        margin: 30px 0px 30px;
+    }
+
+    .projects > div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .container {
+        min-height: 150px;
+        width: 300px;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        flex-grow: unset;
+        padding: 20px;
+        margin: 20px 20px;
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    h4 {
+        margin: 80px 0px 50px;
+    }
+
+    .container {
+        min-height: 250px;
+        width: 500px;
+        padding: 50px;
+        margin: 50px 50px;
+    }
+
+}
