--- a/css/header.css
+++ b/css/header.css
@@ -35,16 +35,133 @@ h1 {
 
 .btn-Menu {
     cursor: pointer;
+    margin-left: 20px;
 }
 
 .navLinks {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin: 10% 0% 40%;
+    margin: 10% 0% 90%;
     font-size:1.5em;
 }
 
 .navLinks li {
     list-style: none;
+}
+
+.boxMode {
+    display: flex;
+    align-items: center;
+    width: auto;
+}
+
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    visibility: hidden;
+    display: none;
+}
+
+.check {
+    position: relative;
+    display: block;
+    width: 30px;
+    height: 14px;
+    background: var(--fontColorTittle);
+    cursor: pointer;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: ease-in 0.5s;
+}
+
+.check::before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 3px;
+    background: white;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+
+input[type="checkbox"]:checked ~ .check::before{
+    transform: translateX(-50px);
+}
+
+.check::after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    right: 3px;
+    background: black;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    transition: 0.5s;
+    transform: translateX(50px);
+}
+
+input[type="checkbox"]:checked ~ .check::after{
+    transform: translateX(0px);
+}
+
+@media screen and (min-width: 720px) {
+    h1 {
+        font-size: 1.4em;
+    }
+
+    .btn-Menu {
+        font-size: 1.4em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    h1 {
+        font-size: 1.6em;
+    }
+
+    .menu {
+        width: 50%;
+    }
+
+    .btn-Menu {
+        font-size: 1.6em;
+    }
+
+    .navLinks {
+        margin: 10% 0% 30%;
+    }    
+}
+
+@media screen and (min-width: 1920px) {
+    body {
+        font-size: 1.8em;
+    }
+
+    .menu {
+        width: 35%;
+    }
+
+    .check {
+        width: 60px;
+        height: 30px;
+    }
+
+    .check::before {
+        top: 2px;
+        left: 3px;
+        width: 24px;
+        height: 24px;
+    }
+
+    .check::after {
+        top: 2px;
+        right: 3px;
+        width: 24px;
+        height: 24px;
+    }
+    
+
 }
