--- a/css/index.css
+++ b/css/index.css
@@ -69,3 +69,16 @@
 body {
     overflow-x: hidden;
 }
+
+a {
+    color: inherit;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+button:hover {
+    background-color: #143dad ;
+    transition: 0.5s;
+}
