--- a/css/tech.css
+++ b/css/tech.css
@@ -6,20 +6,17 @@
     font: var(--fontColorP);
 }
 
-.tech > div {
+.tech > div > div {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    background-color: var(--BgColor);
 }
 
-.tech > div > i {
+.tech > div > div > i {
     font-size: 40px;
     color: var(--fontColorTittle);
-}
-
-.tech > div > p {
-    font-size: 1.2em;
 }
 
 h5 {
@@ -27,4 +24,25 @@ h5 {
     text-align: center;
     margin-bottom: 10px;
     color: var(--fontColorTittle);
+}
+
+@media screen and (min-width: 720px) {
+    h5 {
+        font-size: 2em;
+        margin: 30px 0px;
+    }
+
+    .tech > div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    h5 {
+        margin-top: 80px;
+    }
+    
 }
